/* 
  OCS.strings
  OCS

  Created by Zakaria on 12/12/2021.
*/
"com.ocs.zak.search" = "film, serie, magazine...";
"com.ocs.zak.ok" = "OK";
    //<!-- Errors -->
"com.ocs.zak.Error.unexpected" = "Oops sorry - Something went wrong, please try again.";
"com.ocs.zak.Alert.Error" = "Error";
